--- a/fronted/Crawler/src/style.css
+++ b/fronted/Crawler/src/style.css
@@ -1,2 +1,7 @@
 @import "tailwindcss";
 @plugin "@iconify/tailwind4";
+/* these are necessary styles for vue flow */
+@import '@vue-flow/core/dist/style.css';
+
+/* this contains the default theme, these are optional styles */
+@import '@vue-flow/core/dist/theme-default.css';
